Used OpenRewrite upgrade to java 17 to use some java 17 features